tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0217/input.js
function hello() { 'use strict'; "\1"; }
